--- a/day02/basic_css/basic_css.html
+++ b/day02/basic_css/basic_css.html
@@ -1,3 +1,4 @@
+<!--대부분 태그는 부모를 꽉 채운다-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +8,18 @@
     <link rel="stylesheet" href="basic_css.css">
 </head>
 <body>
-    <h1>네이버</h1>
+    <!-- <h1>네이버</h1>
     <h2>넷플릭스</h2>
     <h3>업비트</h3>
+    <a href="https://www.naver.com">네이버</a> -->
+    <!-- ctrl + /: 주석 단축키 -->
+    <!--의미없는 태그, block-->
+    <!-- <div>태그 </div> -->
+    <!-- 의미없는 태그, inline -->
+    <!-- <span>태그</span> -->
+
+    <div>로그인</div>
+    
+
 </body>
 </html>
