--- a/day02/pills/pills.html
+++ b/day02/pills/pills.html
@@ -13,32 +13,35 @@
             <i class="fa-solid fa-folder"></i>
             <span>전체</span>
         </span>
-        <span class="motel">
+        <span class="pill_">
             <i class="fa-solid fa-building"></i>
             <span>모텔</span>
         </span>
-        <span class="hotel">
+        <span class="pill_">
             <i class="fa-solid fa-hotel"></i>
-            <span>호텔</span>
+            <span>호텔·리조트</span>
             </span>
-        <span class="pension">
+        <span class="pill_">
             <i class="fa-solid fa-house"></i>
             <span>팬션·풀빌라</span>
             </span>
-        <span class="premium">
+        <span class="pill_">
             <i class="fa-solid fa-sack-dollar"></i>
             <span>프리미엄 블랙</span>
         </span>
-        <span class="camping">
+        <span class="pill_">
             <i class="fa-solid fa-campground"></i>
             <span>캠핑·글램핑</span>
         </span>
-        <span class="home">
+        <span class="pill_">
             <i class="fa-solid fa-people-roof"></i>
             <span>홈&빌라</span></span>
-        <span class="guest">
+        <span class="pill_">
             <i class="fa-solid fa-mountain"></i>
-            <span>게하·한옥</span></span>
+            <span>게하·한옥</span>
+        </span>
+        
+
     </div>
 </body>
 </html>
