--- a/day02/kakao/kakao.html
+++ b/day02/kakao/kakao.html
@@ -9,13 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div class="normal">로그인</div>
+    <!--css의 클래스는 여러개 가질 수 있다. -->
+    <div class="normal button">로그인</div>
     <!-- 요소가 그냥 있는 것보다는 span 등 안에 넣어두는 것이 코드가 깔끔하다.-->
-    <div class="kakao">
+    <div class="kakao button">
         <i class="fa-solid fa-comment"></i>
         <span>카카오 로그인</span>
         </div>
-    <div class="apple">
+    <div class="apple button">
         <i class="fa-brands fa-apple"></i>
         <span> Apple 로그인</span>
        </div>
