--- a/day02/round_button/round_button.html
+++ b/day02/round_button/round_button.html
@@ -8,22 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <!-- <div>
-        <span class="mail">
-            <i class="fa-solid fa-envelope"></i>
-        </span>
-        <span class="apple_">
-            <i class="fa-brands fa-apple"></i>
-        </span>
-    </div> -->
     <div class="button_layout">
-        <span class="button">
+        <div class="button sky">
             <i class="fa-solid fa-envelope email"></i>
-        </span>
-        <span class="abutton">
+        </div>
+
+        <div class="button black">
             <i class="fa-brands fa-apple apple"></i>
-        </span>
+        </div>
     </div>
-    
 </body>
 </html>
