--- a/day03/button/button.html
+++ b/day03/button/button.html
@@ -15,10 +15,14 @@
   </head>
   <body>
     <div class="big_box">
-      <i class="fa-brands fa-apple"></i>
-      <div class="letter">
-        <div class="feight">Download on the</div>
-        <div class="feight">App Store</div>
+      <div class="content">
+        <div class="icon">
+          <i class="fa-brands fa-apple"></i>
+        </div>
+        <div class="text">
+          <span class="weight">Download on the</span>
+          <span class="weight">App Store</span>
+        </div>
       </div>
     </div>
   </body>
