--- a/day03/icons/icons.html
+++ b/day03/icons/icons.html
@@ -15,19 +15,20 @@
   </head>
   <body>
     <div class="found box">
-      <div class="charge foundbox">
-        <div class="icon1">
+      <div class="foundbox">
+        <div class="icon red">
           <i class="fa-solid fa-car-battery"></i>
         </div>
         <div class="char">충전소 찾기</div>
       </div>
-      <div class="gas foundbox">
-        <div class="icon2">
+      <div class="foundbox">
+        <div class="icon blue">
           <i class="fa-solid fa-gas-pump"></i>
         </div>
         <div class="char">주유소 찾기</div>
       </div>
     </div>
+
     <div class="made box">
       <div class="smallbox">
         <div class="car smallerbox">
