--- a/day05/ediya/ediya.html
+++ b/day05/ediya/ediya.html
@@ -19,6 +19,7 @@
           </div>
         </div>
       </div>
+
       <div class="card">
         <div class="ImageBox">
           <img src="cafe1.png" alt="" />
@@ -41,6 +42,7 @@
           </div>
         </div>
       </div>
+
       <div class="card">
         <div class="ImageBox">
           <img src="cafe3.png" alt="" />
@@ -50,6 +52,10 @@
           <div class="gift">
             <span>선물하기</span>
           </div>
+          <div class="mask">
+            <span>품절입니다.</span>
+          </div>
+          
         </div>
       </div>
     </div>
