--- a/day05/ediya/ediya_tea.html
+++ b/day05/ediya/ediya_tea.html
@@ -38,6 +38,9 @@
         </div>
         <div class="title">허쉬 스토로베리 초콜렛</div>
         <div class="button">선물하기</div>
+        <div class="mask">
+          <span>품절입니다.</span>
+        </div>
       </div>
     </div>
   </body>
